# Translator-Api

./: .gitignore  Dockerfile  README.md  pyproject.toml
pyproject/: main.py  translate_service.py
pyproject/api/v1/: translate.py
pyproject/schemes/: translate.py
